set(TARGET_NAME libmycuda)
set(TARGET_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/libmycuda.cu)
set(CMAKE_CUDA_ARCHITECTURES 87)

add_library(${TARGET_NAME} ${TARGET_SOURCES})

target_include_directories(${TARGET_NAME}
	PUBLIC 
	    ${CMAKE_CURRENT_SOURCE_DIR}
)

set_target_properties(${TARGET_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

